# mcrd-tauri-intro

./: readme.md
cli-app/: bun.lockb  package.json
cli-app/src/: App.vue
cli-app/src-tauri/: Cargo.toml  tauri.conf.json
cli-app/src-tauri/src/: main.rs
live-demo/: bun.lockb  package.json
live-demo/src-tauri/: Cargo.toml  tauri.conf.json
live-demo/src-tauri/src/: main.rs
sys-tray/: bun.lockb  package.json
sys-tray/src-tauri/: Cargo.toml  tauri.conf.json
sys-tray/src-tauri/src/: main.rs
